appId: host.exp.Exponent
---
- tapOn:
    text: "Allow"
    optional: true
- tapOn:
    text: "Not Now"
    optional: true
- tapOn:
    text: "Save Password"
    optional: true
- tapOn:
    text: "Not Now"
    optional: true
